prusti-tests/tests/verify/pass/floats/unreachable_branch.rs
fn main() {
    let x = 0.42;
    if x < 0. {
        unreachable!();
    }
    
}